使用 Colab 创建而成

--- a/HW01/HW01.ipynb
+++ b/HW01/HW01.ipynb
@@ -286,7 +286,7 @@
         "        # Normalize features (you may remove this part to see what will happen)\n",
         "        self.data[:, 40:] = \\\n",
         "            (self.data[:, 40:] - self.data[:, 40:].mean(dim=0, keepdim=True)) \\\n",
-        "            / self.data[:, 40:].std(dim=0, keepdim=True)\n",
+        "            / self.data[:, 40:].std(dim=0, keepdim=True)#标准化，减去均值后除以标准差，只对40列之后的数据做对应处理\n",
         "\n",
         "        self.dim = self.data.shape[1]\n",
         "\n",
@@ -380,7 +380,8 @@
         "    def cal_loss(self, pred, target):\n",
         "        ''' Calculate loss '''\n",
         "        # TODO: you may implement L1/L2 regularization here\n",
-        "        return self.criterion(pred, target)"
+        "        return self.criterion(pred, target)\n",
+        "        #"
       ],
       "execution_count": null,
       "outputs": []
@@ -404,6 +405,69 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "初始化设置:\n",
+        "\n",
+        "从config获取最大训练轮数n_epochs\n",
+        "\n",
+        "使用反射机制从torch.optim创建优化器(如Adam/SGD等)\n",
+        "\n",
+        "初始化最小MSE值为1000(作为比较大的初始值)\n",
+        "\n",
+        "创建loss记录字典，用于保存训练和验证损失\n",
+        "\n",
+        "训练循环:\n",
+        "\n",
+        "外层循环控制训练轮数(epoch)\n",
+        "\n",
+        "每轮开始时设置模型为训练模式(model.train())\n",
+        "\n",
+        "内层循环遍历训练数据:\n",
+        "\n",
+        "清空梯度(optimizer.zero_grad())\n",
+        "\n",
+        "将数据移动到指定设备\n",
+        "\n",
+        "前向传播计算预测值\n",
+        "\n",
+        "计算MSE损失\n",
+        "\n",
+        "反向传播计算梯度\n",
+        "\n",
+        "优化器更新模型参数\n",
+        "\n",
+        "记录训练损失\n",
+        "\n",
+        "验证阶段:\n",
+        "\n",
+        "每轮训练后调用dev函数在验证集上评估模型\n",
+        "\n",
+        "如果验证损失改善:\n",
+        "\n",
+        "更新最小MSE值\n",
+        "\n",
+        "保存模型到指定路径\n",
+        "\n",
+        "重置early_stop计数器\n",
+        "\n",
+        "否则增加early_stop计数器\n",
+        "\n",
+        "早期停止:\n",
+        "\n",
+        "当验证损失连续config['early_stop']轮没有改善时，停止训练\n",
+        "\n",
+        "结束处理:\n",
+        "\n",
+        "打印训练结束信息\n",
+        "\n",
+        "返回最小验证MSE和损失记录"
+      ],
+      "metadata": {
+        "id": "cwSb8zMs3Vt7"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "lOqcmYzMO7jB"
@@ -412,11 +476,11 @@
         "def train(tr_set, dv_set, model, config, device):\n",
         "    ''' DNN training '''\n",
         "\n",
-        "    n_epochs = config['n_epochs']  # Maximum number of epochs\n",
+        "    n_epochs = config['n_epochs']  # Maximum number of epochs #config: 配置字典，包含训练参数\n",
         "\n",
         "    # Setup optimizer\n",
         "    optimizer = getattr(torch.optim, config['optimizer'])(\n",
-        "        model.parameters(), **config['optim_hparas'])\n",
+        "        model.parameters(), **config['optim_hparas'])#getattr() 函数用于返回一个对象属性值。\n",
         "\n",
         "    min_mse = 1000.\n",
         "    loss_record = {'train': [], 'dev': []}      # for recording training loss\n",
