使用 Colab 创建而成

--- a/HW03/HW03.ipynb
+++ b/HW03/HW03.ipynb
@@ -5,8 +5,7 @@
     "accelerator": "GPU",
     "colab": {
       "name": "HW03.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -17805,16 +17804,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/madefake-sudo/LEEML/blob/main/HW03/HW03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "D_a2USyd4giE"
       },
       "source": [
@@ -18137,7 +18126,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "PHaFE-8oQtkC",
-        "outputId": "d57b19f5-37fd-4915-8c34-d1f76926b641",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000,
@@ -18813,7 +18801,8 @@
             "dfd56e5e2d8f4569a98da551db2a76c3",
             "f44f779b9f4f4aa7b180636482e85265"
           ]
-        }
+        },
+        "outputId": "d57b19f5-37fd-4915-8c34-d1f76926b641"
       },
       "source": [
         "# \"cuda\" only when GPUs are available.\n",
@@ -31079,7 +31068,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "4HznI9_-ocrq",
-        "outputId": "fe62999b-5e2a-4ef4-d117-08582a154962",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -31096,7 +31084,8 @@
             "5290b2920b7e4a74bbfc3f008c27fd7f",
             "8d0df585639c4482aeda6ccc89aa06dc"
           ]
-        }
+        },
+        "outputId": "fe62999b-5e2a-4ef4-d117-08582a154962"
       },
       "source": [
         "# Make sure the model is in eval mode.\n",
